Quick fix overflow-scrolling of lthi_snapshot_view
TBR=dsinclair

Review URL: https://codereview.appspot.com/14758043

--- a/src/cc/layer_tree_host_impl_view.css
+++ b/src/cc/layer_tree_host_impl_view.css
@@ -4,6 +4,7 @@
  */
 
 .lthi-s-view {
+  -webkit-flex: 1 1 auto !important;
   -webkit-flex-direction: row;
   display: -webkit-flex;
 }
